# court-hearing-scheduler

./: .dockerignore  .gitignore  README.md  pyproject.toml
docker/: Dockerfile  docker-compose.yml  entrypoint.sh
src/accounts/: admin.py  apis.py  models.py  serializers.py  tests.py  urls.py
src/accounts/management/commands/: seed_demo_users.py
src/accounts/migrations/: 0001_initial.py
src/config/: settings.py  urls.py
src/hearings/: admin.py  apis.py  apps.py  forms.py  models.py  serializers.py  signals.py  tests.py  urls.py  views.py
src/hearings/migrations/: 0001_initial.py
src/hearings/static/: hearing_list_page.css
src/hearings/templates/: hearing_confirm_delete.html  hearing_form.html  hearing_list.html
src/templates/: base.html
src/templates/partials/: navbar.html
