[project]
name = "court-hearing-scheduler"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "django>=6.0.5",
    "django-debug-toolbar>=6.3.0",
    "django-extensions>=4.1",
    "django-stubs>=6.0.4",
    "djangorestframework>=3.17.1",
    "drf-spectacular>=0.29.0",
    "gunicorn>=26.0.0",
    "huey>=3.0.1",
    "model-bakery>=1.23.4",
    "pytest>=8.0.0",
    "pytest-django>=4.7.0",
    "ruff>=0.15.13",
    "whitenoise>=6.12.0",
]

[tool.ruff]
line-length = 180

[tool.ty.rules]
all = "warn"

[tool.ty.environment]
python-version = "3.14"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings"
python_files = ["tests.py", "test_*.py", "*_tests.py"]
testpaths = ["src"]
addopts = "--tb=short"
